# enum_ids

./: .gitignore  Cargo.toml  README.md  changelog.md
.github/workflows/: on_pull_request.yml
src/: attr.rs  context.rs  lib.rs  test.rs
src/tests/ui/compile_fail/: invalid_attr.rs  invalid_attr.stderr
src/tests/ui/pass/: custom_name.rs  default.rs  derive.rs  display.rs  display_from_value.rs  display_variant.rs  display_variant_snake.rs  generic.rs  getter.rs  iter.rs  iterator.rs  no_derive.rs  not_public.rs  public.rs
