[package]
name = "enum_ids"
version = "0.2.3"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = "Generate a companion ID enum and an associated getter method for the annotated enum"
license = "Apache-2.0"
keywords = [
    "enum",
    "derive",
    "id",
    "identifier",
    "converting",
]
categories = [
    "data-structures",
    "development-tools",
    "value-formatting",
]
repository = "https://github.com/icsmw/enum_ids.git"
homepage = "https://github.com/icsmw/enum_ids.git"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
trybuild = "1.0"
serde = { version="1.0", features=["derive"] }
